📱 사이드바 contact 수정

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1524,7 +1524,7 @@ search {
     }
 
     .sidebar-bottom {
-      padding-left: 2.75rem;
+      /*padding-left: 2.75rem;*/
       margin-bottom: 1.75rem;
 
       a:not(:last-child) {
