🎨 sidebar menu theme 에 따른 이미지 변경

--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -38,6 +38,7 @@
   --site-title-color: #717070;
   --site-subtitle-color: #868686;
   --sidebar-bg: #1e1e1e;
+  --sidebar-bg-image: url('/assets/img/sidebar/dark_sidebar.png');
   --sidebar-border-color: #292929;
   --sidebar-muted-color: #868686;
   --sidebar-active-color: rgb(255, 255, 255, 0.95);
