--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -41,6 +41,7 @@
   --site-title-color: rgb(113, 113, 113);
   --site-subtitle-color: #717171;
   --sidebar-bg: #f6f8fa;
+  --sidebar-bg-image: url('/assets/img/sidebar/light_sidebar.png');
   --sidebar-border-color: #efefef;
   --sidebar-muted-color: #545454;
   --sidebar-active-color: #1d1d1d;
